--- a/homework.rmd
+++ b/homework.rmd
@@ -7,7 +7,7 @@ output:
   bookdown::pdf_document2:
     toc: false
 bibliography: bib.bibtex
-abstract: We found nothing at all ;)
+abstract: Using public available gene data and self extracted data with NGS technology to tertermine the systematic position in the neodermata. BUSO complete genes were used for tree building. 
 ---
 
 # Introduction
@@ -69,7 +69,7 @@ LEADING:30 TRAILING:30 SLIDINGWINDOW:5:20 MINLEN:500
 
 Assembly of contigs and scaffolds was done with PLATANUS^[docker://chrishah/platanus:v1.2.4], standard settings. Long reads from our ONT lab work were used in combination with the resulting scaffolds with pyScaf^[docker://chrishah/pyscaf-docker] logic to improve the quality of the assembly.
 
-On all samples including our sequenced samples a BUSCO^[docker://chrishah/busco-docker:v3.1.0] analysis was done for gene labeling and quality control. The Metazoa `metazoa_odb9` lineage dataset was used with mode `genome` and flag for self-training August optimization mode (`--long`), because our given non-model species. TODO was ist die sp flag?
+On all samples including our sequenced samples a BUSCO^[docker://chrishah/busco-docker:v3.1.0] analysis was done for gene labeling and quality control. The Metazoa `metazoa_odb9` lineage dataset was used with mode `genome` and flag for self-training August optimization mode (`--long`), because our given non-model species and `schistosoma` was used in the species select flag.
 
 
 # Results
